versioned_docs/version-2.3.x/4_guides/2_metatype.mdx
---
sidebar_position: 2
---

# Meta Type

This section discusses how to create parent and children `MetaType`.

import { Image } from '@site/src/components/Image'

## Create Child MetaType 🦜

To create child Meta Type, pass the parent type into the 4th argument of the child.

```ts title='metaType.ts'
import { MetaTypeCreator, getFirelord, getFirestore } from 'firelordjs'

const db = getFirestore()

export type Parent = MetaTypeCreator<
	{
		a: number
	},
	'columnIDLevel1', // collectionId type
	string, // docId type
	null // you can skip this, top collection don't need parent
>

export type Child = MetaTypeCreator<
	{
		a: 'a' | 'b' | 'c'
		b: { c: number }
	},
	'columnIDLevel2', // collectionId type
	string, // docId type
	Parent // child's parent is Parent
>

export type GrandChild = MetaTypeCreator<
	{
		e: { f: boolean }[]
	},
	'columnIDLevel3', // collectionId type
	string, // docId type
	Child // grandChild's parent is child
>
```

```ts title='firelordRef.ts'
import { Parent, Child, GrandChild } from './metaType.ts'

export const parentRef = getFirelord<Parent>(
	db,
	'columnIDLevel1' // parent col ID
)

export const childRef = getFirelord<Child>(
	db,
	'columnIDLevel1', // parent col ID
	'columnIDLevel2' // child col ID
)

export const grandChildRef = getFirelord<GrandChild>(
	db,
	'columnIDLevel1', // parent col ID
	'columnIDLevel2', // child col ID
	'columnIDLevel3' // grandChild col ID
)
```

```ts title='doc-col-group.ts'
import { parentRef, childRef, grandChildRef } from './firelordRef.ts'

// doc ref
export const parentDocRef = parentRef.doc(
	'docIDLevel1' // parent doc ID
)
export const childDocRef = childRef.doc(
	'docIDLevel1', // parent doc ID
	'docIDLevel2' // child doc ID
)
export const grandChildDocRef = grandChildRef.doc(
	'docIDLevel1', // parent doc ID
	'docIDLevel2', // child doc ID
	'docIDLevel3' // grand child doc ID
)

// collectionRef require only ANCESTORS document ID
export const parentColRef = parentRef.collection()
export const childColRef = childRef.collection(
	'docIDLevel1' // parent doc ID
)
export const grandChildColRef = grandChildRef.collection(
	'docIDLevel1', // parent doc ID
	'docIDLevel2' // child doc ID
)

// collection group doesn't need any ID.
export const parentColGroupRef = parentRef.collectionGroup()
export const childColGroupRef = childRef.collectionGroup()
export const grandChildColGroupRef = grandChildRef.collectionGroup()
```

:::tip
You only need document IDs to create `docRef` and `collectionRef`.

You only need to write collection ID when you create `MetaType` and `FirelordRef`, you never need to write any collection ID afterward.
:::

## Type Checking

FirelordJS check for the type of your collection ID and document ID.

<Image
	src="/firelordv2/metaType2.png"
	text="Unknown collection ID trigger type error"
/>

<Image
	src="/firelordv2/metaType3.png"
	text="Missing collection ID trigger type error"
/>

## Index Accessor

In case you want to explore MetaType, you can use index accessor, this is useful if you want to abstract FirelordJS.

<Image
	src="/firelordv2/metaType4.png"
	text="Explore MetaType with index accessor."
/>
